Test: Beginnings of a test suite

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,7 @@ if(APPLE)
 endif()
 set(BUILD_PERF OFF CACHE BOOL "Build performance profiling tool")
 set(BUILD_TEST OFF CACHE BOOL "Build testing harness")
+set(BUILD_SUITE OFF CACHE BOOL "Build test suite")
 set(BUILD_EXAMPLE OFF CACHE BOOL "Build example frontends")
 set(BUILD_STATIC OFF CACHE BOOL "Build a static library")
 set(BUILD_SHARED ON CACHE BOOL "Build a shared library")
@@ -330,6 +331,7 @@ endif()
 set(WANT_ZLIB ${USE_ZLIB})
 set(WANT_PNG ${USE_PNG})
 set(WANT_LIBZIP ${USE_LIBZIP})
+set(USE_CMOCKA ${BUILD_SUITE})
 
 find_feature(USE_FFMPEG "libavcodec;libavformat;libavresample;libavutil;libswscale")
 find_feature(USE_ZLIB "ZLIB")
@@ -338,6 +340,7 @@ find_feature(USE_PNG "PNG")
 find_feature(USE_LIBZIP "libzip")
 find_feature(USE_MAGICK "MagickWand")
 find_feature(USE_EPOXY "epoxy")
+find_feature(USE_CMOCKA "cmocka")
 
 # Features
 set(DEBUGGER_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/debugger/debugger.c)
@@ -633,6 +636,7 @@ else()
 		set(DISABLE_FRONTENDS ON)
 		set(BUILD_PERF OFF)
 		set(BUILD_TEST OFF)
+		set(BUILD_SUITE OFF)
 	endif()
 endif()
 
@@ -699,6 +703,16 @@ if(BUILD_TEST)
 	target_link_libraries(${BINARY_NAME}-fuzz ${BINARY_NAME})
 	set_target_properties(${BINARY_NAME}-fuzz PROPERTIES COMPILE_DEFINITIONS "${OS_DEFINES};${FEATURE_DEFINES};${FUNCTION_DEFINES}")
 	install(TARGETS ${BINARY_NAME}-fuzz DESTINATION bin COMPONENT ${BINARY_NAME}-test)
+endif()
+
+if(NOT USE_CMOCKA)
+	set(BUILD_SUITE OFF)
+endif()
+if(USE_CMOCKA)
+	enable_testing()
+	include_directories(AFTER ${CMOCKA_INCLUDE_DIRS})
+	link_directories(${CMOCKA_LIBRARY_DIRS})
+	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/platform/test/suite ${CMAKE_CURRENT_BINARY_DIR}/suite)
 endif()
 
 if(BUILD_EXAMPLE)
@@ -782,6 +796,7 @@ if(NOT QUIET)
 	message(STATUS "	SDL (${SDL_VERSION}): ${BUILD_SDL}")
 	message(STATUS "	Profiling: ${BUILD_PERF}")
 	message(STATUS "	Test harness: ${BUILD_TEST}")
+	message(STATUS "	Test suite: ${BUILD_SUITE}")
 	message(STATUS "	Examples: ${BUILD_EXAMPLE}")
 	message(STATUS "Cores:")
 	message(STATUS "	Libretro core: ${BUILD_LIBRETRO}")
