Python: Preliminary, incomplete bindings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,6 +28,7 @@ set(BUILD_PERF OFF CACHE BOOL "Build performance profiling tool")
 set(BUILD_TEST OFF CACHE BOOL "Build testing harness")
 set(BUILD_SUITE OFF CACHE BOOL "Build test suite")
 set(BUILD_EXAMPLE OFF CACHE BOOL "Build example frontends")
+set(BUILD_PYTHON OFF CACHE BOOL "Build Python bindings")
 set(BUILD_STATIC OFF CACHE BOOL "Build a static library")
 set(BUILD_SHARED ON CACHE BOOL "Build a shared library")
 set(SKIP_LIBRARY OFF CACHE BOOL "Skip building the library (useful for only building libretro or OpenEmu cores)")
@@ -750,6 +751,11 @@ if(BUILD_SUITE)
 	add_test(${BINARY_NAME}-suite ${BINARY_NAME}-suite)
 endif()
 
+if(BUILD_PYTHON)
+	enable_testing()
+	add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/src/platform/python ${CMAKE_CURRENT_BINARY_DIR}/python)
+endif()
+
 if(BUILD_EXAMPLE)
 	add_executable(${BINARY_NAME}-example-server ${CMAKE_CURRENT_SOURCE_DIR}/src/platform/example/client-server/server.c)
 	target_link_libraries(${BINARY_NAME}-example-server ${BINARY_NAME})
@@ -833,6 +839,7 @@ if(NOT QUIET)
 	message(STATUS "	Profiling: ${BUILD_PERF}")
 	message(STATUS "	Test harness: ${BUILD_TEST}")
 	message(STATUS "	Test suite: ${BUILD_SUITE}")
+	message(STATUS "	Python bindings: ${BUILD_PYTHON}")
 	message(STATUS "	Examples: ${BUILD_EXAMPLE}")
 	message(STATUS "Cores:")
 	message(STATUS "	Libretro core: ${BUILD_LIBRETRO}")
