Python: Basic setup.py

--- a/src/platform/python/CMakeLists.txt
+++ b/src/platform/python/CMakeLists.txt
@@ -8,13 +8,21 @@ foreach(COMPILE_DEF IN LISTS COMPILE_DEFINITIONS)
 	list(APPEND PY_COMPILE_DEFS -D${COMPILE_DEF})
 endforeach()
 
+configure_file(${CMAKE_CURRENT_SOURCE_DIR}/setup.py.in ${CMAKE_CURRENT_BINARY_DIR}/setup.py)
+
 add_custom_command(OUTPUT _builder.h
                    COMMAND ${CMAKE_C_COMPILER} ${PY_COMPILE_DEFS} ${PY_INCLUDE_DIRS} -fno-inline -E -P -c ${CMAKE_CURRENT_SOURCE_DIR}/_builder.h -o _builder.h
                    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/_builder.h)
 add_custom_target(_builder.h ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/_builder.h)
 
-add_custom_command(OUTPUT ${BINARY_NAME}/_pylib.so
-                   COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/_builder.py ${PY_COMPILE_DEFS} ${PY_INCLUDE_DIRS}
-                   DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/_builder.py
-                   DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/_builder.h)
-add_custom_target(_pylib.so ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${BINARY_NAME}/_pylib.so)
+add_custom_target(${BINARY_NAME}-pylib COMMAND python ${CMAKE_CURRENT_SOURCE_DIR}/_builder.py ${PY_COMPILE_DEFS} ${PY_INCLUDE_DIRS}
+                  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/_builder.py
+                  DEPENDS _builder.h)
+
+add_custom_command(OUTPUT ${BINARY_NAME}/__init__.py
+                   COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_CURRENT_SOURCE_DIR}/${BINARY_NAME} ${CMAKE_CURRENT_BINARY_DIR}/${BINARY_NAME}
+                   COMMAND python ${CMAKE_CURRENT_BINARY_DIR}/setup.py build
+                   DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/setup.py
+                   DEPENDS ${BINARY_NAME}-pylib)
+
+add_custom_target(${BINARY_NAME}-py ALL DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/${BINARY_NAME}/__init__.py)
