Python: Add image and PNG-write bindings

--- a/src/platform/python/CMakeLists.txt
+++ b/src/platform/python/CMakeLists.txt
@@ -4,7 +4,7 @@ get_property(COMPILE_DEFINITIONS DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY COMPILE_
 foreach(INCLUDE_DIR IN LISTS INCLUDE_DIRECTORIES)
 	list(APPEND PY_INCLUDE_DIRS -I${INCLUDE_DIR})
 endforeach()
-foreach(COMPILE_DEF IN LISTS COMPILE_DEFINITIONS)
+foreach(COMPILE_DEF IN LISTS COMPILE_DEFINITIONS FEATURE_DEFINES)
 	list(APPEND PY_COMPILE_DEFS -D${COMPILE_DEF})
 endforeach()
 
